# isra

./: .dockerignore  .env.example  .gcloudignore  .gitignore  AGENTS.md  EVALUATION.md  README.md  cloudbuild.yaml  package.json  pyproject.toml  turbo.json
apps/api/: Dockerfile  package.json  pyproject.toml
apps/api/src/: auth.py  config.py  email.py  llm.py  main.py
apps/api/tests/: auth_test.py  test_api.py  test_prompt.py
apps/evals/: pyproject.toml
apps/evals/src/: __main__.py  config.py  generation_eval.py  golden.jsonl  golden.py  judge.py  report.py  retrieval_eval.py
apps/evals/tests/: test_config.py  test_generation_eval.py  test_golden.py  test_judge.py  test_report.py  test_retrieval_eval.py
apps/ingest/: pyproject.toml
apps/ingest/src/: __main__.py  chunker.py  embedder.py  loader.py  merge.py  runner.py  sample_data.py  schema.py  scraper.py  test-data.py  yc_scraper.py
apps/ingest/tests/: test_chunker.py  test_loader.py  test_merge.py  test_runner.py  test_sample_data.py  test_schema.py  test_scraper.py  test_yc_scraper.py
apps/web/: README.md  eslint.config.js  middleware.ts  package.json  tsconfig.json  vercel.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/(app)/chat/: page.tsx
apps/web/app/(app)/startups/: page.tsx
apps/web/app/(landing)/: layout.tsx  page.tsx
apps/web/app/(landing)/forgot-password/: page.tsx
apps/web/app/(landing)/login/: page.tsx
apps/web/app/(landing)/reset-password/: page.tsx
apps/web/app/(landing)/signup/: page.tsx
apps/web/app/api/auth/forgot-password/: route.ts
apps/web/app/api/auth/me/: route.ts
apps/web/app/api/auth/reset-password/: route.ts
apps/web/app/api/auth/signin/: route.ts
apps/web/app/api/auth/signout/: route.ts
apps/web/app/api/auth/signup/: route.ts
apps/web/app/api/chat/: route.ts
apps/web/app/api/feedback/: route.ts
apps/web/app/api/ingest/: route.ts
apps/web/app/api/search/: route.ts
apps/web/app/api/startups/: route.ts
apps/web/app/ingest/: page.tsx
apps/web/app/lab/: page.tsx
apps/web/app/search/: page.tsx
apps/web/components/chat/: Answer.tsx  ChatInput.test.tsx  ChatInput.tsx  ChatView.tsx  EmptyState.tsx  FeedbackBar.tsx  Message.tsx  PipelineTree.tsx  RetrievalTrace.tsx  SourcesPanel.tsx
apps/web/components/ingest/: IngestView.tsx
apps/web/components/lab/: LabView.tsx
apps/web/components/landing/: Bento.tsx  CTA.tsx  FAQ.tsx  Features.tsx  Footer.tsx  Hero.tsx  Marquee.tsx  Navbar.tsx  Stats.tsx  index.ts
apps/web/components/layout/: AppShell.tsx  CommandPalette.tsx  ConversationList.tsx  Logo.tsx  Providers.tsx  Sidebar.tsx  ThemeToggle.tsx  Topbar.tsx  nav.tsx
apps/web/components/login/: BackToHome.tsx  ForgotPasswordForm.tsx  LoginForm.test.tsx  LoginForm.tsx  ResetPasswordForm.tsx  SignupForm.tsx
apps/web/components/search/: ResultRow.tsx  SearchView.tsx
apps/web/components/startups/: StartupCard.tsx  StartupDrawer.tsx  StartupsView.tsx
apps/web/components/ui/: Button.tsx  Kbd.tsx  ModeSelector.tsx  Spinner.tsx  StateView.tsx  TopKControl.tsx
apps/web/lib/: api.ts  auth.test.ts  auth.ts  env.test.ts  env.ts  format.ts  id.ts  proxy.ts  sse.test.ts  sse.ts  theme.tsx  types.ts
apps/web/lib/hooks/: useChatStream.ts
apps/web/lib/store/: conversations.tsx  settings.tsx
docs/superpowers/plans/: 2026-06-09-ingest-pipeline.md
docs/superpowers/specs/: 2026-06-09-rag-architecture-design.md
infra/: compose.yml  deploy-api.sh
