[project]
name = "isra-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "isra-retrieval",
    "fastapi[standard]",
    "langfuse",
    "psycopg[binary]",
    "httpx",
    "pgvector",
    "sentence-transformers",
    "numpy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = ["pytest"]
