[project]
name = "isra-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "isra-retrieval",
    "fastapi[standard]",
    "langfuse",
    "psycopg[binary]",
    "httpx",
    "pgvector",
    "sentence-transformers",
    "numpy",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.0",
    "python-dotenv>=1",
    "openrouter>=0.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = ["pytest"]
