[project]
name = "isra-ingest"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "isra-retrieval",
    "httpx",
    "beautifulsoup4",
    "lxml",
    "pydantic>=2",
]

[dependency-groups]
dev = ["pytest"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
pythonpath = ["."]
